--- a/index.html
+++ b/index.html
@@ -1,197 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flight to Z</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-    /* Airplane animation */
-    .plane {
-      position: absolute;
-      top: 20%;
-      left: -100px;
-      width: 80px;
-      height: 80px;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/e/e0/Airplane_silhouette.svg') no-repeat center/contain;
-      animation: fly 20s linear infinite;
-      opacity: 0.8;
-    }
-    @keyframes fly {
-      0% { left: -100px; top: 15%; }
-      50% { top: 5%; }
-      100% { left: 110%; top: 20%; }
-    }
-    .fade-in { opacity: 0; transform: translateY(20px); transition: all 1s; }
-    .fade-in.visible { opacity: 1; transform: translateY(0); }
-  </style>
-</head>
-<body class="bg-gray-50 text-gray-800">
+<!-- Search -->
+<section id="search" class="py-16 bg-white">
+  <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
+    <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
+    <form class="grid md:grid-cols-2 gap-4">
+      <!-- From -->
+      <input list="airports" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
+      <!-- To -->
+      <input list="airports" placeholder="To (e.g. BOM – Mumbai)" class="px-4 py-3 rounded-lg border"/>
+      <!-- Dates -->
+      <input type="date" class="px-4 py-3 rounded-lg border"/>
+      <input type="date" class="px-4 py-3 rounded-lg border"/>
+      <!-- Cabin -->
+      <select class="px-4 py-3 rounded-lg border">
+        <option>Economy</option>
+        <option>Business</option>
+        <option>First</option>
+      </select>
+      <!-- Passengers -->
+      <input type="number" min="1" value="1" class="px-4 py-3 rounded-lg border"/>
+      <!-- Submit -->
+      <button type="submit" class="md:col-span-2 bg-brand-600 hover:bg-brand-700 text-white py-3 rounded-lg">Show Deals</button>
+    </form>
 
-  <!-- Hero Section -->
-  <section class="relative h-screen bg-gradient-to-b from-sky-400 to-sky-200 flex flex-col justify-center items-center text-center text-white">
-    <div class="plane"></div>
-    <h1 class="text-5xl font-bold drop-shadow-lg">Flight to Z</h1>
-    <p class="mt-4 text-xl">Best Deals on Flights Canada ✈ India ✈ USA</p>
-    <p class="mt-2">📞 +91 70097 67211 | ✉ sales@flighttoz.com</p>
-  </section>
+    <!-- Airport codes for autocomplete -->
+    <datalist id="airports">
+      <!-- India -->
+      <option value="DEL – New Delhi (Indira Gandhi Intl)">
+      <option value="BOM – Mumbai (Chhatrapati Shivaji)">
+      <option value="BLR – Bengaluru (Kempegowda Intl)">
+      <option value="MAA – Chennai (Chennai Intl)">
+      <option value="CCU – Kolkata (Netaji Subhas Chandra Bose)">
+      <!-- Canada -->
+      <option value="YYZ – Toronto (Pearson Intl)">
+      <option value="YVR – Vancouver (Vancouver Intl)">
+      <option value="YUL – Montreal (Trudeau Intl)">
+      <option value="YYC – Calgary (Calgary Intl)">
+      <option value="YEG – Edmonton (Edmonton Intl)">
+      <!-- USA -->
+      <option value="JFK – New York (John F. Kennedy Intl)">
+      <option value="EWR – New Jersey (Newark Intl)">
+      <option value="LAX – Los Angeles (LAX Intl)">
+      <option value="ORD – Chicago (O’Hare Intl)">
+      <option value="DFW – Dallas (Fort Worth Intl)">
+      <option value="SFO – San Francisco (SFO Intl)">
+      <option value="MIA – Miami (Miami Intl)">
+      <option value="BOS – Boston (Logan Intl)">
+    </datalist>
 
-  <!-- Search Section -->
-  <section id="search" class="py-16 bg-white">
-    <div class="max-w-4xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
-      <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
-      <form id="flightSearch" class="grid md:grid-cols-2 gap-4">
-        <!-- From -->
-        <input list="airports" name="from" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
-        <!-- To -->
-        <input list="airports" name="to" placeholder="To (e.g. YYZ – Toronto)" class="px-4 py-3 rounded-lg border"/>
-        <!-- Dates -->
-        <input type="date" name="depart" class="px-4 py-3 rounded-lg border"/>
-        <input type="date" name="return" class="px-4 py-3 rounded-lg border"/>
-        <!-- Cabin -->
-        <select name="cabin" class="px-4 py-3 rounded-lg border">
-          <option>Economy</option>
-          <option>Business</option>
-          <option>First</option>
-        </select>
-        <!-- Passengers -->
-        <input type="number" name="passengers" min="1" value="1" class="px-4 py-3 rounded-lg border"/>
-        <!-- Currency -->
-        <select name="currency" id="currency" class="px-4 py-3 rounded-lg border">
-          <option value="CAD" selected>CAD</option>
-          <option value="USD">USD</option>
-          <option value="INR">INR</option>
-        </select>
-        <!-- Submit -->
-        <button type="submit" class="md:col-span-2 bg-sky-600 hover:bg-sky-700 text-white py-3 rounded-lg">Show Deals</button>
-      </form>
-
-      <!-- Airport codes -->
-      <datalist id="airports">
-        <!-- India -->
-        <option value="DEL – New Delhi">
-        <option value="BOM – Mumbai">
-        <option value="BLR – Bengaluru">
-        <option value="MAA – Chennai">
-        <option value="CCU – Kolkata">
-        <!-- Canada -->
-        <option value="YYZ – Toronto">
-        <option value="YVR – Vancouver">
-        <option value="YUL – Montreal">
-        <option value="YYC – Calgary">
-        <option value="YEG – Edmonton">
-        <!-- USA -->
-        <option value="JFK – New York">
-        <option value="EWR – Newark">
-        <option value="LAX – Los Angeles">
-        <option value="ORD – Chicago">
-        <option value="DFW – Dallas">
-        <option value="SFO – San Francisco">
-        <option value="MIA – Miami">
-        <option value="BOS – Boston">
-      </datalist>
-    </div>
-  </section>
-
-  <!-- Flight Results -->
-  <section id="results" class="py-16 bg-gray-100 hidden">
-    <div class="max-w-5xl mx-auto">
-      <h2 class="text-2xl font-bold mb-6">Available Flights</h2>
-      <div id="flightResults" class="grid md:grid-cols-2 gap-6"></div>
-    </div>
-  </section>
-
-  <!-- About -->
-  <section class="py-16 bg-white fade-in">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold">About Us</h2>
-      <p class="mt-4 text-lg">Flight to Z specializes in affordable flights between Canada, India, and USA. With 24/7 support and unbeatable prices, we make travel simple and stress-free.</p>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section class="py-16 bg-sky-50 fade-in">
-    <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-3xl font-bold">Our Services</h2>
-      <div class="grid md:grid-cols-3 gap-6 mt-8">
-        <div class="p-6 bg-white rounded-xl shadow">✈️ Cheap Flights</div>
-        <div class="p-6 bg-white rounded-xl shadow">📞 24/7 Support</div>
-        <div class="p-6 bg-white rounded-xl shadow">🌍 Multi-country Booking</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Reviews -->
-  <section class="py-16 bg-white fade-in">
-    <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-3xl font-bold">Customer Reviews</h2>
-      <div class="grid md:grid-cols-3 gap-6 mt-8">
-        <div class="p-6 bg-sky-50 rounded-xl shadow">⭐⭐⭐⭐⭐<br>"Great service and prices!"</div>
-        <div class="p-6 bg-sky-50 rounded-xl shadow">⭐⭐⭐⭐⭐<br>"Fast booking, highly recommend."</div>
-        <div class="p-6 bg-sky-50 rounded-xl shadow">⭐⭐⭐⭐⭐<br>"Best deals for Canada to India."</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="py-16 bg-sky-100 fade-in">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold">Contact Us</h2>
-      <p class="mt-4">📞 +91 70097 67211</p>
-      <p>✉ sales@flighttoz.com</p>
-      <a href="https://wa.me/917009767211" target="_blank" class="mt-4 inline-block bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg">Chat on WhatsApp</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="py-6 bg-gray-800 text-white text-center">
-    <p>© 2025 Flight to Z. All rights reserved.</p>
-  </footer>
-
-  <!-- Script -->
-  <script>
-    const form = document.getElementById('flightSearch');
-    const resultsSection = document.getElementById('results');
-    const resultsDiv = document.getElementById('flightResults');
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const currency = document.getElementById('currency').value;
-      resultsSection.classList.remove('hidden');
-      resultsDiv.innerHTML = '';
-
-      const sampleFlights = [
-        {from: 'DEL', to: 'YYZ'},
-        {from: 'BOM', to: 'YVR'},
-        {from: 'YYZ', to: 'DEL'},
-        {from: 'JFK', to: 'BOM'},
-        {from: 'YVR', to: 'SFO'}
-      ];
-
-      sampleFlights.forEach(flight => {
-        const price = Math.floor(Math.random() * 500 + 500); // random 500–1000
-        const message = `Hello, I want to book a flight ${flight.from} → ${flight.to} at ${currency} ${price}`;
-        const whatsappURL = `https://wa.me/917009767211?text=${encodeURIComponent(message)}`;
-
-        const card = `
-          <div class="p-6 bg-white rounded-xl shadow">
-            <h3 class="text-xl font-bold">${flight.from} → ${flight.to}</h3>
-            <p class="mt-2 text-lg font-semibold">${currency} ${price}</p>
-            <a href="${whatsappURL}" target="_blank" class="mt-4 inline-block bg-sky-600 hover:bg-sky-700 text-white px-4 py-2 rounded">Book Now</a>
-          </div>
-        `;
-        resultsDiv.innerHTML += card;
-      });
-    });
-
-    // Fade-in animation on scroll
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) entry.target.classList.add('visible');
-      });
-    });
-    document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
-  </script>
-</body>
-</html>
+    <p class="text-xs text-slate-500 mt-2">*Live API booking coming soon.</p>
+  </div>
+</section>
