--- a/index.html
+++ b/index.html
@@ -1,52 +1,168 @@
-<!-- Search -->
-<section id="search" class="py-16 bg-white">
-  <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
-    <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
-    <form class="grid md:grid-cols-2 gap-4">
-      <!-- From -->
-      <input list="airports" placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
-      <!-- To -->
-      <input list="airports" placeholder="To (e.g. BOM – Mumbai)" class="px-4 py-3 rounded-lg border"/>
-      <!-- Dates -->
-      <input type="date" class="px-4 py-3 rounded-lg border"/>
-      <input type="date" class="px-4 py-3 rounded-lg border"/>
-      <!-- Cabin -->
-      <select class="px-4 py-3 rounded-lg border">
-        <option>Economy</option>
-        <option>Business</option>
-        <option>First</option>
-      </select>
-      <!-- Passengers -->
-      <input type="number" min="1" value="1" class="px-4 py-3 rounded-lg border"/>
-      <!-- Submit -->
-      <button type="submit" class="md:col-span-2 bg-brand-600 hover:bg-brand-700 text-white py-3 rounded-lg">Show Deals</button>
-    </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flight to Z – Smart Flight Booking</title>
+  <meta name="description" content="Flight to Z – Find and book affordable flights worldwide. Smart, simple, and secure." />
+  <meta name="keywords" content="cheap flights, flight booking, Flight to Z, India flights, international flights" />
+  <meta property="og:title" content="Flight to Z – Smart Flight Booking"/>
+  <meta property="og:description" content="Find and book affordable flights worldwide with Flight to Z."/>
+  <meta property="og:image" content="logo.png"/>
+  <meta property="og:type" content="website"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'ui-sans-serif'] },
+          colors: { brand: { 500: '#06b6d4', 600: '#0891b2', 700: '#0e7490' } }
+        }
+      }
+    }
+  </script>
+  <style>
+    html { scroll-behavior: smooth; }
+    .animate-plane { animation: fly 6s linear infinite; }
+    @keyframes fly { 
+      0% { transform: translateX(-50px) translateY(0); } 
+      50% { transform: translateX(50vw) translateY(-30px);} 
+      100% { transform: translateX(100vw) translateY(0);} 
+    }
+  </style>
+</head>
+<body class="font-sans text-slate-800">
+  <!-- Header -->
+  <header class="sticky top-0 z-40 bg-white shadow">
+    <div class="max-w-7xl mx-auto px-4 flex items-center justify-between h-16">
+      <a href="#" class="flex items-center gap-2">
+        <img src="logo.png" alt="Flight to Z Logo" class="h-10 w-10 rounded"/>
+        <span class="text-xl font-bold text-brand-600">Flight to Z</span>
+      </a>
+      <nav class="hidden md:flex gap-6 text-sm">
+        <a href="#home" class="hover:text-brand-600">Home</a>
+        <a href="#about" class="hover:text-brand-600">About</a>
+        <a href="#contact" class="hover:text-brand-600">Contact</a>
+        <a href="#search" class="bg-brand-600 text-white px-4 py-2 rounded-lg hover:bg-brand-700">Book Flights</a>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Airport codes for autocomplete -->
-    <datalist id="airports">
-      <!-- India -->
-      <option value="DEL – New Delhi (Indira Gandhi Intl)">
-      <option value="BOM – Mumbai (Chhatrapati Shivaji)">
-      <option value="BLR – Bengaluru (Kempegowda Intl)">
-      <option value="MAA – Chennai (Chennai Intl)">
-      <option value="CCU – Kolkata (Netaji Subhas Chandra Bose)">
-      <!-- Canada -->
-      <option value="YYZ – Toronto (Pearson Intl)">
-      <option value="YVR – Vancouver (Vancouver Intl)">
-      <option value="YUL – Montreal (Trudeau Intl)">
-      <option value="YYC – Calgary (Calgary Intl)">
-      <option value="YEG – Edmonton (Edmonton Intl)">
-      <!-- USA -->
-      <option value="JFK – New York (John F. Kennedy Intl)">
-      <option value="EWR – New Jersey (Newark Intl)">
-      <option value="LAX – Los Angeles (LAX Intl)">
-      <option value="ORD – Chicago (O’Hare Intl)">
-      <option value="DFW – Dallas (Fort Worth Intl)">
-      <option value="SFO – San Francisco (SFO Intl)">
-      <option value="MIA – Miami (Miami Intl)">
-      <option value="BOS – Boston (Logan Intl)">
-    </datalist>
+  <!-- Hero -->
+  <section id="home" class="relative bg-gradient-to-r from-sky-100 to-cyan-50 overflow-hidden">
+    <div class="absolute top-10 left-0 animate-plane">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-brand-600" fill="currentColor" viewBox="0 0 24 24"><path d="M2.5 19.5l19-7.5-19-7.5v5l13 2.5-13 2.5v5z"/></svg>
+    </div>
+    <div class="max-w-7xl mx-auto px-4 py-20 text-center">
+      <h1 class="text-4xl md:text-6xl font-extrabold">Find <span class="text-brand-600">Smart & Cheap</span> Flights</h1>
+      <p class="mt-4 text-lg text-slate-600">Your trusted portal to book flights worldwide, fast and transparent.</p>
+      <div class="mt-6 flex justify-center gap-4">
+        <a href="#search" class="bg-brand-600 hover:bg-brand-700 text-white px-6 py-3 rounded-lg shadow">Search Flights</a>
+        <a href="#about" class="border border-slate-300 px-6 py-3 rounded-lg hover:border-brand-600">Learn More</a>
+      </div>
+    </div>
+  </section>
 
-    <p class="text-xs text-slate-500 mt-2">*Live API booking coming soon.</p>
-  </div>
-</section>
+  <!-- Search -->
+  <section id="search" class="py-16 bg-white">
+    <div class="max-w-3xl mx-auto bg-slate-50 p-8 rounded-2xl shadow">
+      <h2 class="text-2xl font-bold mb-6">Search Flights</h2>
+      <form class="grid md:grid-cols-2 gap-4">
+        <input placeholder="From (e.g. DEL – New Delhi)" class="px-4 py-3 rounded-lg border"/>
+        <input placeholder="To (e.g. BOM – Mumbai)" class="px-4 py-3 rounded-lg border"/>
+        <input type="date" class="px-4 py-3 rounded-lg border"/>
+        <input type="date" class="px-4 py-3 rounded-lg border"/>
+        <select class="px-4 py-3 rounded-lg border"><option>Economy</option><option>Business</option></select>
+        <input type="number" min="1" value="1" class="px-4 py-3 rounded-lg border"/>
+        <button type="submit" class="md:col-span-2 bg-brand-600 hover:bg-brand-700 text-white py-3 rounded-lg">Show Deals</button>
+      </form>
+      <p class="text-xs text-slate-500 mt-2">*Live API booking coming soon.</p>
+    </div>
+  </section>
+
+  <!-- Features -->
+  <section class="py-16 bg-slate-50">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      <h2 class="text-3xl font-extrabold mb-10">Why Choose Flight to Z?</h2>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="p-6 bg-white rounded-xl shadow hover:shadow-lg">
+          <h3 class="font-bold mb-2">✈️ Cheap Flights</h3>
+          <p>We bring you the best deals with no hidden fees.</p>
+        </div>
+        <div class="p-6 bg-white rounded-xl shadow hover:shadow-lg">
+          <h3 class="font-bold mb-2">🤝 Trusted Airlines</h3>
+          <p>Partnering with top global airlines for reliable service.</p>
+        </div>
+        <div class="p-6 bg-white rounded-xl shadow hover:shadow-lg">
+          <h3 class="font-bold mb-2">📲 Smart Alerts</h3>
+          <p>Get price drop alerts so you never miss a bargain.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="py-16">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h2 class="text-3xl font-extrabold mb-4">About Us</h2>
+      <p class="text-lg text-slate-600">Flight to Z is building a better way to discover and book flights. Our mission is to make airfare search simple, transparent, and fair. We're preparing to integrate with global flight APIs to offer you real-time prices soon.</p>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="py-16 bg-slate-100">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-3xl font-extrabold mb-6 text-center">Contact Us</h2>
+      <form action="#" method="POST" class="grid gap-4 bg-white p-6 rounded-xl shadow">
+        <input type="text" placeholder="Your Name" class="px-4 py-3 rounded-lg border" required>
+        <input type="email" placeholder="Email" class="px-4 py-3 rounded-lg border" required>
+        <textarea placeholder="Message" class="px-4 py-3 rounded-lg border h-32" required></textarea>
+        <button type="submit" class="bg-brand-600 text-white py-3 rounded-lg hover:bg-brand-700">Send Message</button>
+      </form>
+      <div class="text-center mt-6">
+        <p>Email: <a href="mailto:Sales@flighttoz.com" class="text-brand-600">Sales@flighttoz.com</a></p>
+        <p>Phone: <a href="tel:+917009767211" class="text-brand-600">+91 70097 67211</a></p>
+        <a href="https://wa.me/917009767211" target="_blank" class="inline-block mt-4 bg-green-500 text-white px-4 py-2 rounded-lg">💬 Chat on WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-6 bg-white border-t text-center text-slate-600 text-sm">
+    © <span id="year"></span> Flight to Z. All rights reserved.
+  </footer>
+
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+</body>
+<script>
+  const API_KEY = '8ef20815e927059544227d49b0c127f1';
+
+  // Simulated API call (replace with real endpoint)
+  async function searchFlights() {
+    const from = document.querySelector('input[placeholder*="From"]').value;
+    const to = document.querySelector('input[placeholder*="To"]').value;
+
+    try {
+      // Example endpoint (replace with real API URL)
+      const res = await fetch(`https://api.example.com/flights?from=${from}&to=${to}&key=${API_KEY}`);
+      const data = await res.json();
+
+      console.log('Flight Results:', data);
+      alert('Flights fetched! Check console.');
+    } catch (err) {
+      console.error('API Error:', err);
+      alert('Failed to fetch flight data.');
+    }
+  }
+
+  // Attach handler to form submit
+  document.querySelector('form').addEventListener('submit', (e) => {
+    e.preventDefault();
+    searchFlights();
+  });
+</script>
+
+
